Refactor user hover creation to separate method